# molqrc

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.claude/notes/: README.md  architecture.md  notes.md  open-questions.md
.claude/specs/: INDEX.md
.github/workflows/: ci.yml  release.yml
include/: molqrc.h
molqrc/: __init__.py  _png.py  cli.py  export.py  preview.py  web.py
molqrc_web/: index.html
src/: internal.h  matrix.c  molqrc.c  qrc.c  rs.c  segment.c
tests/: test_molqrc.c  test_python_bindings.py
