[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "molcrafts-molqrc"
version = "0.1.1"
description = "QR Code generator — Python CLI + API"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}

[project.optional-dependencies]
png = ["Pillow"]

[project.scripts]
molqrc = "molqrc.cli:main"

[tool.scikit-build]
cmake.version = ">=3.14"
wheel.packages = ["molqrc"]
